base du site modif

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <title>Mon super site</title>
 </head>
 <body>
-<h1>Le titre de mon site</h1>
+<h1>Hola qué tal</h1>
 
-<h2>Sous-titre</h2>        
+<h2>chikitas de la noche</h2>        
 
 
 
