--- a/contact.html
+++ b/contact.html
@@ -11,5 +11,7 @@
     <h3>Mail@Web.com</h3>
     <h3><a href="twitter.com">#Lolkissflex</a></h3>
     <h3><a href="Facebook.com">FB Lolkissflex</a></h3>
+    
+    <img src="" alt="">
 </body>
 </html>
