--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Contact</title>
+        <link type="text/css" rel="stylesheet" href="main.css">
+
 </head>
 <body>
+   <header>
+    <nav>
+       <ul>
+           <li><a href="index.html">Acceuil</a></li>
+           <li><a href="Parcours.html">Parcours et compétences</a></li>
+           <li><a href="contact.html">Contact</a></li>
+       </ul>
+        
+    </nav>
+</header>
     <h1>Me contacter</h1>
-    <h3>Adresse paris </h3>
-    <h3>Numero de tel </h3>
-    <h3>Mail@Web.com</h3>
-    <h3><a href="twitter.com">#Lolkissflex</a></h3>
-    <h3><a href="Facebook.com">FB Lolkissflex</a></h3>
+    <h4>Louvres, 95380, France </h4>
+    <h4>0624487038 </h4>
+    <h4>lea.seisen@hotmail.fr</h4>
+    <h4><a href="twitter.com">Twitter</a></h4>
+    <h4><a href="Facebook.com">Facebook</a></h4>
     
     <img src="" alt="">
 </body>
