--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Mon super site</title>
+    <title>Princesse Léa</title>
+    <link type="text/css" rel="stylesheet" href="main.css">
 </head>
 <body>
 <header>
@@ -17,8 +18,8 @@
 </header>
 
    <main>
-   <h1>Léa Seisen</h1>
-       <p>Je suis Léa Seisen <br>J'ai 20 ans<br>J'habites dans le val d'oise, en Ile-de-France <br> Je prépare un BTS Communication au Cesacom</br></p>    
+   <h1>Me, Myself and I</h1>
+       <p>Léa Seisen <br>20 ans | Louvres, Val d'Oise | BTS Communication</br></p>    
 </main>
 
 <footer>
