projet tst modif

--- a/Parcours.html
+++ b/Parcours.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Parcours et compétences</title>
         <link type="text/css" rel="stylesheet" href="main.css">
+            <link href='http://fonts.googleapis.com/css?family=Lobster|Pacifico' rel='stylesheet' type='text/css'>
+               <link href='http://fonts.googleapis.com/css?family=Lobster|Handlee' rel='stylesheet' type='text/css'>
+
 
 </head>
 <body>
@@ -32,6 +35,15 @@
       
       <li>2014: Employée commerciale polyvalente, MONOPRIX </li>
 </ul>
+  <h1>Compétences</h1>
+  <ul>
+  <li>Anglais : Maitrise </li>
+  <li>Allemand : Novice</li>
+  <li>Indesign : en cours d'apprentissage</li>
+  <li>Illustrator : en cours d'apprentissage</li>
+  <li>Word : Maitrise</li>
+  <li>Powerpoint : Maitrise</li>
+  </ul>
    </main>
     
 </body>
