--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <title>Contact</title>
         <link type="text/css" rel="stylesheet" href="main.css">
+            <link href='http://fonts.googleapis.com/css?family=Lobster|Pacifico' rel='stylesheet' type='text/css'>
+               <link href='http://fonts.googleapis.com/css?family=Lobster|Handlee' rel='stylesheet' type='text/css'>
+
 
 </head>
 <body>
@@ -18,8 +21,8 @@
     </nav>
 </header>
     <h1>Me contacter</h1>
-    <h4>Louvres, 95380, France </h4>
-    <h4>0624487038 </h4>
+   <h4>Louvres, 95380, France </h4>
+    <h4>0624242418 </h4>
     <h4>lea.seisen@hotmail.fr</h4>
     <h4><a href="twitter.com">Twitter</a></h4>
     <h4><a href="Facebook.com">Facebook</a></h4>
