--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Princesse Léa</title>
     <link type="text/css" rel="stylesheet" href="main.css">
+   <link href='http://fonts.googleapis.com/css?family=Lobster|Handlee' rel='stylesheet' type='text/css'>
+  
 </head>
 <body>
 <header>
     <nav>
        <ul>
-           <li><a href="index.html">Acceuil</a></li>
+           <li><a href="index.html">Accueil</a></li>
            <li><a href="Parcours.html">Parcours et compétences</a></li>
            <li><a href="contact.html">Contact</a></li>
        </ul>
@@ -19,12 +21,11 @@
 
    <main>
    <h1>Me, Myself and I</h1>
+      <img class="photohome" src="img/pp.jpg" width="200">
        <p>Léa Seisen <br>20 ans | Louvres, Val d'Oise | BTS Communication</br></p>    
 </main>
 
-<footer>
-    
-    
+<footer>   
 </footer>
 
 </body>
